# tinyfx

./: CMakeLists.txt  tinyfx.c  tinyfx.h
examples/: CMakeLists.txt  demo.c  demo_util.h
