project(demo1)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}../)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}../SDL2-2.0.9/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../SDL2-2.0.9/lib/x86)
link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../)
set(d1_src ${CMAKE_CURRENT_SOURCE_DIR}/demo.c)
add_executable(demo1 ${d1_src})
target_link_libraries(demo1 SDL2.lib SDL2main.lib tinyfx.lib)
